feat: added factory and fibonacci algorithm

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,5 +22,9 @@
             }
           }
     ],
-    "rules": {}
+    "rules": {
+      "indent": "off",
+      "import/extensions": "off",
+      "import/prefer-default-export": "off"
+    }
 }
