--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
 
   "scripts": {
-    "test": "jest",
+    "test": "NODE_OPTIONS=--experimental-vm-modules npx jest",
     "start": "node index.js"
   },
 
