--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,6 +24,7 @@
     ],
     "rules": {
       "indent": "off",
+      "no-console": "off",
       "import/extensions": "off",
       "import/prefer-default-export": "off"
     }
