--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,8 +24,10 @@
     ],
     "rules": {
       "indent": "off",
+      "wrap-iife": "off",
       "no-console": "off",
       "import/extensions": "off",
+      "class-methods-use-this": "off",
       "import/prefer-default-export": "off"
     }
 }
